--- a/src/components/feature/feature.css
+++ b/src/components/feature/feature.css
@@ -1,4 +1,4 @@
-.gpt3__feature-container__feature {
+.gpt3__features-container__feature {
   width: 100%;
   display: flex;
   justify-content: space-between;
@@ -6,4 +6,43 @@
   flex-direction: row;
 
   margin: 1rem;
+}
+
+.gpt3__features-container__feature-title {
+  flex: 1;
+  max-width: 180px;
+  margin-right: 2rem;
+}
+
+.gpt3__features-container__feature-title h1 {
+  color: #fff;
+
+  font-family: var(--font-family);
+  font-size: 18px;
+  font-weight: 800;
+  line-height: 24px;
+  letter-spacing: -0.04em;
+}
+
+.gpt3__features-container__feature-title div {
+  width: 38px;
+  height: 3px;
+  background: var(--gradient-bar);
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  margin-bottom: 0.25rem;
+}
+
+.gpt3__features-container__feature-text {
+  flex: 2;
+  max-width: 380px;
+  display: flex;
+}
+
+.gpt3__features-container_feature-text p {
+  color: var(--color-text);
+
+  font-family: var(--font-family);
+  font-size: 14px;
+  font-weight: 500;
+  line-height: 24px;
 }
