--- a/src/components/cta/cta.css
+++ b/src/components/cta/cta.css
@@ -39,7 +39,7 @@
   margin-left: 2rem;
 }
 
-.gpt3__cta-button button {
+.gpt3__cta-btn button {
   background: #000;
   color: #fff;
   border-radius: 40px;
@@ -51,4 +51,31 @@
   outline: none;
   cursor: pointer;
   min-width: 150px;
+}
+
+/* @MEDIA__________________________________________________________________________________________ */
+@media screen and (max-width: 810px) {
+  .gpt3__cta {
+    flex-direction: column;
+  }
+
+  .gpt3__cta-btn {
+    margin: 2rem 0 0;
+  }
+}
+
+@media screen and (max-width: 550px) {
+  .gpt3__cta {
+    margin: 4rem 2rem;
+  }
+
+  .gpt3__cta-content h3 {
+    font-size: 18px;
+    line-height: 32px;
+  }
+
+  .gpt3__cta-btn button {
+    font-size: 14px;
+    line-height: 28px;
+  }
 }
