--- a/src/components/article/article.css
+++ b/src/components/article/article.css
@@ -48,3 +48,12 @@
 .gpt3__blog-container_article-content p:last-child {
   cursor: pointer;
 }
+
+/* @MEDIA_______________________________________________________________________________________________ */
+
+@media screen and (max-width: 550px) {
+  .gpt3__blog-container_article-content {
+    font-size: 18px;
+    line-height: 25px;
+  }
+}
