--- a/src/containers/footer/footer.css
+++ b/src/containers/footer/footer.css
@@ -107,7 +107,7 @@
 }
 
 .gpt3__footer-copyright {
-  margin-top: 2rem;
+  margin-top: 4rem;
   text-align: center;
   width: 100%;
 }
@@ -117,4 +117,35 @@
   font-family: var(--font-family);
   line-height: 15px;
   color: #fff;
+}
+
+/* @MEDIA___________________________________________________________________________ */
+@media screen and (max-width: 850px) {
+  .gpt3__footer-heading h1 {
+    font-size: 44px;
+    line-height: 50px;
+  }
+}
+
+@media screen and (max-width: 550px) {
+  .gpt3__footer-heading h1 {
+    font-size: 34px;
+    line-height: 42px;
+  }
+
+  .gpt3__footer-links div {
+    margin: 1rem 0;
+  }
+
+  .gpt3__footer-btn p {
+    font-size: 14px;
+    line-height: 20px;
+  }
+}
+
+@media screen and (max-width: 400px) {
+  .gpt3__footer-heading h1 {
+    font-size: 27px;
+    line-height: 38px;
+  }
 }
